Fix solo kernel(fb.ko)

--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -23,6 +23,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
         kernel-module-snd-pcm kernel-module-snd \
 	kernel-module-tun \
 	kernel-module-autofs4 \
+	kernel-module-fb \
 	v4l-dvb-module-dvb-core \
         "   
 
