needed changes for new buildimage tool

--- a/conf/machine/dm7020hd.conf
+++ b/conf/machine/dm7020hd.conf
@@ -54,7 +54,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-
 
 KERNEL_EXTRA_CMD = ${@base_contains('PREFERRED_VERSION_linux-dm7020hd', '2.6.18', '--disable-compressor=lzo ', '', d)}
 
-EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x4000 -n -l "
+EXTRA_IMAGECMD_jffs2 = " -e 0x40000 -n -l"
 IMAGE_CMD_jffs2 = "\
 	mkfs.jffs2 \
 		--root=${IMAGE_ROOTFS}/boot \
@@ -62,6 +62,10 @@ IMAGE_CMD_jffs2 = "\
 		--disable-compressor=lzo \
 		--compression-mode=size \
 		--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+		${EXTRA_IMAGECMD}; \
+	sumtool \
+		-i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+		-o ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2.sum \
 		${EXTRA_IMAGECMD}; \
 	rm -rf ${IMAGE_ROOTFS}/boot/*; \
 	mkfs.jffs2 \
@@ -71,10 +75,14 @@ IMAGE_CMD_jffs2 = "\
 		--compression-mode=size \
 		--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
 		${EXTRA_IMAGECMD}; \
-	buildimage ${STAGING_LIBDIR}/dreambox-secondstage/main.bin.gz \
-		${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-		${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
-		${MACHINE} 64 \
+	sumtool \
+		-i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
+		-o ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2.sum \
+		${EXTRA_IMAGECMD}; \
+	buildimage --arch ${MACHINE} -e 0x40000 -f 0x10000000 -s 4096 \
+		-b 0x100000:${STAGING_LIBDIR}/dreambox-secondstage/main.bin.gz \
+		-d 0x700000:${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2.sum \
+		-d 0xF800000:${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2.sum \
 		> ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi"
 
 GLIBC_EXTRA_OECONF = "--disable-profile --with-tls --with-__thread"
