--- a/conf/machine/dm500hd.conf
+++ b/conf/machine/dm500hd.conf
@@ -52,7 +52,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-
 
 KERNEL_EXTRA_CMD = ${@base_contains('PREFERRED_VERSION_linux-dm500hd', '2.6.18', '--disable-compressor=lzo ', '', d)}
 
-EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x4000 -n -l "
+EXTRA_IMAGECMD_jffs2 = " -e 0x4000 -n -l"
 IMAGE_CMD_jffs2 = "\
 	mkfs.jffs2 \
 		--root=${IMAGE_ROOTFS}/boot \
@@ -69,10 +69,10 @@ IMAGE_CMD_jffs2 = "\
 		--compression-mode=size \
 		--output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
 		${EXTRA_IMAGECMD}; \
-	buildimage ${STAGING_LIBDIR}/dreambox-secondstage/main.bin.gz \
-		${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
-		${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
-		${MACHINE} 64 \
+	buildimage --arch ${MACHINE} -e 0x4000 -f 0x4000000 -s 512 \
+		-b 0x40000:${STAGING_LIBDIR}/dreambox-secondstage/main.bin.gz \
+		-d 0x3C0000:${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+		-d 0x3C00000:${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
 		> ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi"
 
 GLIBC_EXTRA_OECONF = "--disable-profile --with-tls --with-__thread"
