change usb image zip file name

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -91,6 +91,6 @@ IMAGE_CMD_jffs2 = " \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/boot_cfe_auto.jffs2; \
 	cd ${DEPLOY_DIR_IMAGE}; \
 	rm -f usb_upgrade.zip; \
-	zip ultimo_usb_upgrade.zip vuplus/ulitmo/*; \
+	zip ${IMAGE_NAME}_usb.zip vuplus/ulitmo/*; \
 	rm -rf vuplus; \       
 "
