--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -76,6 +76,6 @@ IMAGE_CMD_jffs2 = " \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/splash_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/boot_cfe_auto.jffs2; \
 	cd ${DEPLOY_DIR_IMAGE}; \
-	zip ${IMAGE_NAME}_usb.zip vuplus/ulitmo/*; \
+	zip ${IMAGE_NAME}_usb.zip vuplus/ultimo/*; \
 	rm -rf vuplus; \       
 "
