fix incorrect driver path relocate fb.ko(solo, uno, ultimo)

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -22,6 +22,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
         kernel-module-i2c-core kernel-module-firmware-class kernel-module-input kernel-module-evdev \
         kernel-module-snd-pcm kernel-module-snd \
 	kernel-module-tun \
+	kernel-module-fb \
 	v4l-dvb-module-dvb-core \
         "
 
