--- a/recipes/linux/linux-vusolo-2.6.18/vusolo_defconfig
+++ b/recipes/linux/linux-vusolo-2.6.18/vusolo_defconfig
@@ -1009,6 +1009,12 @@ CONFIG_FB=m
 # CONFIG_FB_VIRTUAL is not set
 
 #
+# Logo configuration
+#
+# CONFIG_LOGO is not set
+# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+
+#
 # Sound
 #
 CONFIG_SOUND=m
