--- a/recipes/linux/linux-vuuno-2.6.18/vuuno_defconfig
+++ b/recipes/linux/linux-vuuno-2.6.18/vuuno_defconfig
@@ -1034,6 +1034,12 @@ CONFIG_FB=m
 # CONFIG_FB_VIRTUAL is not set
 
 #
+# Logo configuration
+#
+# CONFIG_LOGO is not set
+# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+
+#
 # Sound
 #
 CONFIG_SOUND=m
