Add hdmi_cec, and so on.

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -18,7 +18,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
         kernel-module-libata kernel-module-ntfs kernel-module-sata-svw \
         kernel-module-nls-iso8859-15 kernel-module-nls-cp850 \
         kernel-module-nls-utf8 \
-        kernel-module-i2c-core kernel-module-firmware-class kernel-module-input kernel-module-evdev \
+        kernel-module-i2c-core kernel-module-i2c-dev kernel-module-firmware-class kernel-module-input kernel-module-evdev \
         kernel-module-snd-pcm kernel-module-snd \
 	kernel-module-tun \
 	kernel-module-fb \
