--- a/recipes/qt4/qt-4.7.1/g++.conf
+++ b/recipes/qt4/qt-4.7.1/g++.conf
@@ -4,10 +4,11 @@
 
 QMAKE_CC       = $(OE_QMAKE_CC)
 QMAKE_CFLAGS       += -pipe $(OE_QMAKE_CFLAGS)
+QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += $(OE_QMAKE_CFLAGS)
 QMAKE_CFLAGS_DEPS	+= -M
 QMAKE_CFLAGS_WARN_ON	+= -Wall -W
 QMAKE_CFLAGS_WARN_OFF	+= -w
-QMAKE_CFLAGS_RELEASE	+= 
+QMAKE_CFLAGS_RELEASE	+=
 QMAKE_CFLAGS_DEBUG	+= -g
 QMAKE_CFLAGS_SHLIB	+= -fPIC
 QMAKE_CFLAGS_STATIC_LIB	+= -fPIC
@@ -22,6 +23,7 @@ QMAKE_CXXFLAGS_DEPS	+= $$QMAKE_CFLAGS_DEPS
 QMAKE_CXXFLAGS_WARN_ON	+= $$QMAKE_CFLAGS_WARN_ON
 QMAKE_CXXFLAGS_WARN_OFF	+= $$QMAKE_CFLAGS_WARN_OFF
 QMAKE_CXXFLAGS_RELEASE	+= $$QMAKE_CFLAGS_RELEASE
+QMAKE_CXXFLAGS_RELEASE_WITH_DEBUGINFO += $$QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO
 QMAKE_CXXFLAGS_DEBUG	+= $$QMAKE_CFLAGS_DEBUG
 QMAKE_CXXFLAGS_SHLIB	+= $$QMAKE_CFLAGS_SHLIB
 QMAKE_CXXFLAGS_STATIC_LIB += $$QMAKE_CFLAGS_STATIC_LIB
@@ -32,6 +34,8 @@ QMAKE_CXXFLAGS_USE_PRECOMPILE = $$QMAKE_CFLAGS_USE_PRECOMPILE
 
 QMAKE_LINK     = $(OE_QMAKE_LINK)
 QMAKE_LINK_SHLIB   = $(OE_QMAKE_LINK)
+QMAKE_LINK_C		= $(OE_QMAKE_LINK)
+QMAKE_LINK_C_SHLIB	= $(OE_QMAKE_LINK)
 QMAKE_LFLAGS       += $(OE_QMAKE_LDFLAGS)
 QMAKE_LFLAGS_RELEASE	+=
 QMAKE_LFLAGS_DEBUG	+=
@@ -41,13 +45,16 @@ QMAKE_LFLAGS_PLUGIN	+= $$QMAKE_LFLAGS_SHLIB
 QMAKE_LFLAGS_SONAME	+= -Wl,-soname,
 QMAKE_LFLAGS_THREAD	+=
 QMAKE_LFLAGS_NOUNDEF	+= -Wl,--no-undefined
-QMAKE_LFLAGS_RPATH       = -Wl,-rpath-link,
+QMAKE_LFLAGS_RPATH        = -Wl,-rpath-link,
 
 QMAKE_PCH_OUTPUT_EXT    = .gch
 
 # -Bsymbolic-functions (ld) support
 QMAKE_LFLAGS_BSYMBOLIC_FUNC = -Wl,-Bsymbolic-functions
 QMAKE_LFLAGS_DYNAMIC_LIST = -Wl,--dynamic-list,
+
+# some linking helper...
+CONFIG += rpath_libdirs
 
 # for the SDK
 isEmpty(QMAKE_QT_CONFIG):QMAKE_QT_CONFIG = $(OE_QMAKE_QT_CONFIG)
