--- a/conf/machine/bm750.conf
+++ b/conf/machine/bm750.conf
@@ -53,6 +53,9 @@ PREFERRED_PROVIDER_xserver = "xserver-kdrive"
 EXTRA_IMAGEDEPENDS += "vuplus-makenfi-native"
 
 MACHINE_FEATURES += "alsa pci"
+MACHINE_FEATURES += "wifi"
+MACHINE_FEATURES += "vuwlan"
+
 
 
 EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
