dreambox-buildimage-native.bb: update to latest version for 7020hd (needs new 2nd stage loader)

--- a/conf/machine/dm7020hd.conf
+++ b/conf/machine/dm7020hd.conf
@@ -79,7 +79,7 @@ IMAGE_CMD_jffs2 = "\
 		-i ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
 		-o ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2.sum \
 		${EXTRA_IMAGECMD}; \
-	buildimage --arch ${MACHINE} -e 0x40000 -f 0x10000000 -s 4096 \
+	buildimage --brcmnand --arch ${MACHINE} -e 0x40000 -f 0x10000000 -s 4096 \
 		-b 0x100000:${STAGING_LIBDIR}/dreambox-secondstage/main.bin.gz \
 		-d 0x700000:${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2.sum \
 		-d 0xF800000:${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2.sum \
