add compile option for graphic-vfd.

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -54,6 +54,7 @@ EXTRA_IMAGEDEPENDS += "vuplus-makenfi-native"
 MACHINE_FEATURES += "alsa pci"
 MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
+MACHINE_FEATURES += "display-graphic-vfd"
 
 
 
