--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -53,6 +53,7 @@ EXTRA_IMAGEDEPENDS += "vuplus-makenfi-native"
 MACHINE_FEATURES += "alsa pci"
 MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
+MACHINE_FEATURES += "display-text-vfd"
 
 
 EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
