--- a/conf/machine/bm750.conf
+++ b/conf/machine/bm750.conf
@@ -55,6 +55,7 @@ EXTRA_IMAGEDEPENDS += "vuplus-makenfi-native"
 MACHINE_FEATURES += "alsa pci"
 MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
+MACHINE_FEATURES += "display-text-vfd"
 
 
 
