--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -25,6 +25,8 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
 	kernel-module-autofs4 \
 	kernel-module-fb \
 	v4l-dvb-module-dvb-core \
+        kernel-module-usbhid \
+        kernel-module-mousedev \
         "   
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
