--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -23,6 +23,8 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
 	kernel-module-tun \
 	kernel-module-fb \
 	v4l-dvb-module-dvb-core \
+        kernel-module-usbhid \
+        kernel-module-mousedev \
         "
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
