--- a/recipes/linux/linux-bm750-2.6.18/bm750_defconfig
+++ b/recipes/linux/linux-bm750-2.6.18/bm750_defconfig
@@ -1135,10 +1135,29 @@ CONFIG_USB_STORAGE=m
 #
 # USB Input Devices
 #
-# CONFIG_USB_HID is not set
-# csh 20090706 CONFIG_USB_HID=m
-# CONFIG_USB_HIDINPUT=y
+CONFIG_USB_HID=m
+CONFIG_USB_HIDINPUT=y
+# CONFIG_USB_HIDINPUT_POWERBOOK is not set
+# CONFIG_HID_FF is not set
+CONFIG_USB_HIDDEV=y
 
+#
+# USB HID Boot Protocol drivers
+#
+# CONFIG_USB_KBD is not set
+# CONFIG_USB_MOUSE is not set
+# CONFIG_USB_AIPTEK is not set
+# CONFIG_USB_WACOM is not set
+# CONFIG_USB_ACECAD is not set
+# CONFIG_USB_KBTAB is not set
+# CONFIG_USB_POWERMATE is not set
+# CONFIG_USB_TOUCHSCREEN is not set
+# CONFIG_USB_YEALINK is not set
+# CONFIG_USB_XPAD is not set
+# CONFIG_USB_ATI_REMOTE is not set
+# CONFIG_USB_ATI_REMOTE2 is not set
+# CONFIG_USB_KEYSPAN_REMOTE is not set
+# CONFIG_USB_APPLETOUCH is not set
 
 #
 # USB HID Boot Protocol drivers
