--- a/conf/distro/vuplus.conf
+++ b/conf/distro/vuplus.conf
@@ -19,6 +19,14 @@ TARGET_VENDOR = "-vuplus"
 
 #OLDEST_KERNEL = "2.6.16"
 
+PREFERRED_VERSION_qt4-native ?= "4.7.4"
+PREFERRED_VERSION_qt4-tools-sdk ?= "4.7.4"
+PREFERRED_VERSION_qt4-embedded ?= "4.7.4"
+PREFERRED_VERSION_qt4-embedded-gles ?= "4.7.4"
+PREFERRED_VERSION_qt4-x11-free = "4.7.4"
+PREFERRED_VERSION_qt4-x11-free-gles ?= "4.7.4"
+PREFERRED_PROVIDER_qt4-tools-native = "qt4-native"
+
 #
 ## Basic configuration
 #
