--- a/recipes/linux/linux-bm750-2.6.18/NOTE_ON_bm750_defconfig
+++ b/recipes/linux/linux-bm750-2.6.18/NOTE_ON_bm750_defconfig
@@ -1,2 +1,5 @@
 Duo's kernel size should be smaller than 2*1024*1024.
 Considering bad block existence, kernel size is recommended to be smaller than 2*1024*1024 - (128*1024*2)
+
+As of 201110xx, new cfe allowing larger kernel size up to 4M has been released.
+Consequently kernel size limit has been deprecated.
