enigma2.bb : add compile option '--with-set-right-half-vfd-skin' for right half vfd from skin              add font 'orbitron-medium.ttf'              add skin_user.xml

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -57,6 +57,7 @@ MACHINE_FEATURES += "alsa pci"
 MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "display-graphic-vfd"
+MACHINE_FEATURES += "right-half-vfd-skin"
 
 
 
