--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -58,6 +58,7 @@ MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "display-graphic-vfd"
 MACHINE_FEATURES += "right-half-vfd-skin"
+MACHINE_FEATURES += "remote-keyboard"
 
 
 
