--- a/conf/distro/vuplus.conf
+++ b/conf/distro/vuplus.conf
@@ -10,7 +10,7 @@ INHERIT += "package_ipk debian"
 
 DISTRO = "vuplus"
 DISTRO_NAME = "Vuplus"
-DISTRO_VERSION = "2.1.0"
+DISTRO_VERSION = "2.2.0"
 
 
 TARGET_OS = "linux"
@@ -35,7 +35,8 @@ DISTRO_SSH_DAEMON = "dropbear"
 IMAGE_INIT_MANAGER = "sysvinit"
 IMAGE_INITSCRIPTS ?= "initscripts-vuplus"
 IMAGE_LOGIN_MANAGER ?= ""
-IMAGE_FSTYPES ?= "tar.bz2 jffs2"
+#IMAGE_FSTYPES ?= "tar.bz2 jffs2"
+IMAGE_FSTYPES ?= "tar.bz2 ubi"
 
 
 #Images built can have to modes:
@@ -117,7 +118,7 @@ require conf/distro/include/sane-feed-ipk.inc
 PREFERRED_VERSION_autoconf-native = "2.61"
 
 
-#oe complaint
+#oe compliant
 PREFERRED_PROVIDER_virtual/libqte2 = "qte"
 
 
