--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -47,6 +47,12 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-
 
 require conf/machine/include/vuplus-modules.inc
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo', '3.1.1', '${KERNEL_DVB_MODULES}', '', d)}
+
+
+IMAGE_FSTYPES = ${@base_contains('PREFERRED_VERSION_linux-vusolo', '2.6.18', 'tar.bz2 jffs2', 'tar.bz2 ubi', d)}
+
 TARGET_FPU = "hard"
 
 MACHINE_FEATURES += "kernel26"
@@ -79,9 +85,7 @@ EXTRA_IMAGECMD_COMPAT = " --eraseblock=0x20000 -n -l "
 
 IMAGE_CMD_ubi_append = "; \
         cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-        cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
         rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
-        rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
         mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
         --disable-compressor=lzo --compression-mode=size \
         --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
@@ -89,7 +93,29 @@ IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/solo/root_cfe_auto.jffs2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo/kernel_cfe_auto.bin; \
-        cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo/splash_cfe_auto.bin; \
+        cd ${DEPLOY_DIR_IMAGE}; \
+        zip ${IMAGE_NAME}_usb.zip vuplus/solo/*; \
+        rm -rf vuplus; \
+        "
+
+EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
+IMAGE_CMD_jffs2 = " \
+        cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
+        --disable-compressor=lzo --compression-mode=size \
+       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+       ${EXTRA_IMAGECMD}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
+       rm -rf ${IMAGE_ROOTFS}/tmp/*; \
+       mkfs.jffs2 --root=${IMAGE_ROOTFS} \
+        --disable-compressor=lzo --compression-mode=size \
+       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
+       ${EXTRA_IMAGECMD}; \
+       vfi3 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz > ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi; \
+        mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo; \
+        cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo/root_cfe_auto.jffs2; \
+        cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo/kernel_cfe_auto.bin; \
+        cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo/boot_cfe_auto.jffs2; \
         cd ${DEPLOY_DIR_IMAGE}; \
         zip ${IMAGE_NAME}_usb.zip vuplus/solo/*; \
         rm -rf vuplus; \
