--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -45,6 +45,11 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-
 
 require conf/machine/include/vuplus-modules.inc
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuultimo', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vuultimo', '3.1.1', '${KERNEL_DVB_MODULES}', '', d)}
+
+IMAGE_FSTYPES = ${@base_contains('PREFERRED_VERSION_linux-vuultimo', '2.6.18', 'tar.bz2 jffs2', 'tar.bz2 ubi', d)}
+
 TARGET_FPU = "hard"
 
 MACHINE_FEATURES += "kernel26"
@@ -69,6 +74,35 @@ MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "display-graphic-vfd"
 MACHINE_FEATURES += "right-half-vfd-skin"
 MACHINE_FEATURES += "enable-rc-kbd"
+
+
+EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
+IMAGE_CMD_jffs2 = " \
+	cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+	cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
+	rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+	rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
+	mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
+	--disable-compressor=lzo --compression-mode=size \
+       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+       ${EXTRA_IMAGECMD}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
+       rm -rf ${IMAGE_ROOTFS}/tmp/*; \
+       mkfs.jffs2 --root=${IMAGE_ROOTFS} \
+	--disable-compressor=lzo --compression-mode=size \
+       --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
+       ${EXTRA_IMAGECMD}; \
+       vfi3 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz > ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi; \
+	mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/ultimo; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/root_cfe_auto.jffs2; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/kernel_cfe_auto.bin; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/splash_cfe_auto.bin; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/ultimo/boot_cfe_auto.jffs2; \
+	cd ${DEPLOY_DIR_IMAGE}; \
+	zip ${IMAGE_NAME}_usb.zip vuplus/ultimo/*; \
+	rm -rf vuplus; \       
+"
+
+
 
 UBI_VOLNAME = "rootfs"
 MKUBIFS_ARGS = "-m 2048 -e 126976 -c 3984 -F"
