--- a/conf/distro/vuplus.conf
+++ b/conf/distro/vuplus.conf
@@ -10,7 +10,7 @@ INHERIT += "package_ipk debian"
 
 DISTRO = "vuplus"
 DISTRO_NAME = "Vuplus"
-DISTRO_VERSION = "2.1.0"
+DISTRO_VERSION = "2.2.0"
 
 
 TARGET_OS = "linux"
@@ -35,7 +35,7 @@ DISTRO_SSH_DAEMON = "dropbear"
 IMAGE_INIT_MANAGER = "sysvinit"
 IMAGE_INITSCRIPTS ?= "initscripts-vuplus"
 IMAGE_LOGIN_MANAGER ?= ""
-IMAGE_FSTYPES ?= "tar.bz2 jffs2"
+IMAGE_FSTYPES ?= "tar.bz2 ubi"
 
 
 #Images built can have to modes:
