--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -4,13 +4,13 @@
 
 TARGET_ARCH = "mipsel"
 
-PREFERRED_VERSION_linux-vusolo = "2.6.18"
-PREFERRED_VERSION_linux-libc-headers = "2.6.18"
+PREFERRED_VERSION_linux-vusolo = "3.1.1"
+PREFERRED_VERSION_linux-libc-headers = "2.6.31"
 
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18 = "kernel vuplus-dvb-modules \
         kernel-module-isofs \
         kernel-module-sr-mod    kernel-module-usb-storage \
         kernel-module-cdrom \
@@ -29,13 +29,30 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel vuplus-dvb-modules \
         kernel-module-mousedev \
         "   
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
         kernel-module-cifs \
         kernel-module-exportfs \
         kernel-module-ext2 \
         kernel-module-reiserfs \
         kernel-module-xfs \
 	"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
+
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1 = "\
+        kernel-module-ext2 \
+        "
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1}', d)}
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1}', d)}
+
+require conf/machine/include/vuplus-modules.inc
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo', '3.1.1', '${KERNEL_DVB_MODULES}', '', d)}
+
+
+IMAGE_FSTYPES = ${@base_contains('PREFERRED_VERSION_linux-vusolo', '2.6.18', 'tar.bz2 jffs2', 'tar.bz2 ubi', d)}
+
 TARGET_FPU = "hard"
 
 MACHINE_FEATURES += "kernel26"
@@ -59,19 +76,39 @@ MACHINE_FEATURES += "alsa pci"
 MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
 
+UBI_VOLNAME = "rootfs"
+MKUBIFS_ARGS = "-m 2048 -e 126976 -c 4096 -F"
+UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
+IMAGEDIR ?= "${MACHINE}"
+EXTRA_IMAGECMD_COMPAT = " --eraseblock=0x20000 -n -l "
+
+IMAGE_CMD_ubi_append = "; \
+        cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
+        --disable-compressor=lzo --compression-mode=size \
+        --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
+        ${EXTRA_IMAGECMD_COMPAT}; \
+        mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo; \
+        cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/solo/root_cfe_auto.jffs2; \
+        cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo/kernel_cfe_auto.bin; \
+        cd ${DEPLOY_DIR_IMAGE}; \
+        zip ${IMAGE_NAME}_usb.zip vuplus/solo/*; \
+        rm -rf vuplus; \
+        "
 
 EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
 IMAGE_CMD_jffs2 = " \
-	cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
-	rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
-	mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
-	--disable-compressor=lzo --compression-mode=size \
+        cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
+        --disable-compressor=lzo --compression-mode=size \
        --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
        ${EXTRA_IMAGECMD}; rm -rf ${IMAGE_ROOTFS}/boot/*; \
        rm -rf ${IMAGE_ROOTFS}/tmp/*; \
        mkfs.jffs2 --root=${IMAGE_ROOTFS} \
-	--disable-compressor=lzo --compression-mode=size \
+        --disable-compressor=lzo --compression-mode=size \
        --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 \
        ${EXTRA_IMAGECMD}; \
        vfi3 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz > ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi; \
@@ -81,6 +118,6 @@ IMAGE_CMD_jffs2 = " \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo/boot_cfe_auto.jffs2; \
         cd ${DEPLOY_DIR_IMAGE}; \
         zip ${IMAGE_NAME}_usb.zip vuplus/solo/*; \
-        rm -rf vuplus; \ 
-	"
+        rm -rf vuplus; \
+        "
 
