--- a/recipes/linux/linux-vusolo-3.1.1/vusolo_defconfig
+++ b/recipes/linux/linux-vusolo-3.1.1/vusolo_defconfig
@@ -2520,8 +2520,8 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 CONFIG_EARLY_PRINTK=y
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE=""
-# CONFIG_CMDLINE_OVERRIDE is not set
+CONFIG_CMDLINE="boot -z -elf flash0.kernel: 'bmem=144M ubi.mtd=0 root=ubi0:rootfs rootfstype=ubifs rw'"
+CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_DEBUG_STACKOVERFLOW is not set
 # CONFIG_RUNTIME_DEBUG is not set
 
