--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -50,6 +50,7 @@ require conf/machine/include/vuplus-modules.inc
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo', '3.1.1', '${KERNEL_DVB_MODULES}', '', d)}
 
+PREFERRED_VERSION_wpa-supplicant = ${@base_contains('PREFERRED_VERSION_linux-vusolo', '2.6.18', '0.5.10', '0.7.3', d)}
 
 IMAGE_FSTYPES = ${@base_contains('PREFERRED_VERSION_linux-vusolo', '2.6.18', 'tar.bz2 jffs2', 'tar.bz2 ubi', d)}
 
