--- a/conf/machine/vusolo.conf
+++ b/conf/machine/vusolo.conf
@@ -96,6 +96,7 @@ IMAGE_CMD_ubi_prepend = " \
 IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/solo/root_cfe_auto.jffs2; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo/boot_cfe_auto.jffs2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo/kernel_cfe_auto.bin; \
         cd ${DEPLOY_DIR_IMAGE}; \
         zip ${IMAGE_NAME}_usb.zip vuplus/solo/*; \
