--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -97,6 +97,7 @@ IMAGE_CMD_ubi_prepend = " \
 IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/uno; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/uno/root_cfe_auto.jffs2; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/uno/boot_cfe_auto.jffs2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/uno/kernel_cfe_auto.bin; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/uno/splash_cfe_auto.bin; \
         cd ${DEPLOY_DIR_IMAGE}; \
