--- a/conf/machine/vuuno.conf
+++ b/conf/machine/vuuno.conf
@@ -95,6 +95,7 @@ IMAGE_CMD_ubi_prepend = " \
         "
 
 IMAGE_CMD_ubi_append = "; \
+	vfi3 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz > ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.nfi; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/uno; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/uno/root_cfe_auto.jffs2; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/uno/boot_cfe_auto.jffs2; \
