--- a/recipes/linux/linux-bm750-3.1.1/bm750_defconfig
+++ b/recipes/linux/linux-bm750-3.1.1/bm750_defconfig
@@ -201,7 +201,6 @@ CONFIG_ARCH_FLATMEM_ENABLE=y
 CONFIG_ARCH_POPULATES_NODE_MAP=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
-# CONFIG_SPARSEMEM_MANUAL is not set
 CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_PAGEFLAGS_EXTENDED=y
@@ -2537,7 +2536,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 CONFIG_EARLY_PRINTK=y
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="boot -z -elf flash0.kernel: 'bmem=112M ubi.mtd=0 root=ubi0:rootfs rootfstype=ubifs rw rootflags=sync'"
+CONFIG_CMDLINE="bmem=112M ubi.mtd=0 root=ubi0:rootfs rootfstype=ubifs rw rootflags=sync bmem=112M"
 CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_DEBUG_STACKOVERFLOW is not set
 # CONFIG_RUNTIME_DEBUG is not set
