change feature [ remote-keyborad -> enable-rc-kbd ]

--- a/conf/machine/vuultimo.conf
+++ b/conf/machine/vuultimo.conf
@@ -75,7 +75,7 @@ MACHINE_FEATURES += "wifi"
 MACHINE_FEATURES += "vuwlan"
 MACHINE_FEATURES += "display-graphic-vfd"
 MACHINE_FEATURES += "right-half-vfd-skin"
-MACHINE_FEATURES += "remote-keyboard"
+MACHINE_FEATURES += "enable-rc-kbd"
 
 
 
