Wireless Access Point : add new plugin.

--- a/conf/distro/vuplus.conf
+++ b/conf/distro/vuplus.conf
@@ -78,6 +78,7 @@ PREFERRED_VERSION_samba = "3.0.37"
 PREFERRED_VERSION_ushare = "1.1a"
 #PREFERRED_VERSION_liboil = "0.3.14"
 PREFERRED_VERSION_hdparm = "6.6"
+PREFERRED_VERSION_hostap-daemon = "0.7.3"
 
 PREFERRED_PROVIDER_avahi = "avahi"
 PREFERRED_PROVIDER_opkg = "opkg-nogpg"
