--- a/recipes/linux/linux-bm750-3.1.1/bm750_defconfig
+++ b/recipes/linux/linux-bm750-3.1.1/bm750_defconfig
@@ -500,10 +500,13 @@ CONFIG_IPV6_PIMSM_V2=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 # CONFIG_L2TP is not set
-# CONFIG_BRIDGE is not set
+CONFIG_STP=m
+CONFIG_BRIDGE=m
+#CONFIG_BRIDGE_IGMP_SNOOPING is not set
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
+CONFIG_LLC=m
 # CONFIG_LLC2 is not set
 # CONFIG_IPX is not set
 # CONFIG_ATALK is not set
