--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -34,8 +34,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
         kernel-module-reiserfs \
         kernel-module-xfs \
 	"
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1 = "\
 	kernel-module-ext2 \
@@ -105,7 +104,7 @@ IMAGE_CMD_jffs2 = " \
 
 
 UBI_VOLNAME = "rootfs"
-MKUBIFS_ARGS = "-m 2048 -e 126976 -c 3984 -F"
+MKUBIFS_ARGS = "-m 2048 -e 126976 -c 3984"
 UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
 IMAGEDIR ?= "${MACHINE}"
