change kernel version to 2.6.37

--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -4,11 +4,10 @@
 
 TARGET_ARCH = "mipsel"
 
-PREFERRED_VERSION_linux-vusolo2 = "3.1.1"
+PREFERRED_VERSION_linux-vusolo2 = "2.6.37"
 PREFERRED_VERSION_linux-libc-headers = "2.6.31"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
-
+PREFERRED_PROVIDER_virtual/kernel = "linux-vusolo2"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18 = "kernel vuplus-dvb-modules \
         kernel-module-isofs \
@@ -34,19 +33,19 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18 = "\
         kernel-module-reiserfs \
         kernel-module-xfs \
 	"
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1 = "kernel vuplus-dvb-modules"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37 = "kernel vuplus-dvb-modules"
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1 = "\
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37 = "\
 	kernel-module-ext2 \
 	"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1}', d)}
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1}', d)}
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.37}', d)}
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.37}', d)}
 
 require conf/machine/include/vuplus-modules.inc
 
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
-#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '3.1.1', '${KERNEL_DVB_MODULES}', '', d)}
+#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.37', '${KERNEL_WIFI_MODULES}', '', d)}
+#MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.37', '${KERNEL_DVB_MODULES}', '', d)}
 
 PREFERRED_VERSION_wpa-supplicant = ${@base_contains('PREFERRED_VERSION_linux-vusolo2', '2.6.18', '0.5.10', '0.7.3', d)}
 
