--- a/recipes/linux/linux-vuduo2-3.1.1/vuduo2_defconfig
+++ b/recipes/linux/linux-vuduo2-3.1.1/vuduo2_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 2.6.37-2.4 Kernel Configuration
-# Wed Mar 14 16:14:58 2012
+# Linux/mips 2.6.37-2.8 Kernel Configuration
+# Thu Jun  7 19:50:36 2012
 #
 CONFIG_MIPS=y
 
@@ -57,36 +57,23 @@ CONFIG_CAVIUM_OCTEON_HELPER=y
 # Broadcom STB options
 #
 # CONFIG_BRCM_LEGACY is not set
-# CONFIG_BCM35125C0 is not set
-# CONFIG_BCM35126B0 is not set
-# CONFIG_BCM35230C0 is not set
-# CONFIG_BCM35330A0 is not set
 # CONFIG_BCM7125C0 is not set
-# CONFIG_BCM7231A0 is not set
 # CONFIG_BCM7231B0 is not set
 # CONFIG_BCM7340B0 is not set
-# CONFIG_BCM7342B0 is not set
-# CONFIG_BCM7344A0 is not set
 # CONFIG_BCM7344B0 is not set
-# CONFIG_BCM7346A0 is not set
 # CONFIG_BCM7346B0 is not set
 # CONFIG_BCM7358A0 is not set
 # CONFIG_BCM7405B0 is not set
 # CONFIG_BCM7405D0 is not set
 # CONFIG_BCM7408B0 is not set
 # CONFIG_BCM7420C0 is not set
-# CONFIG_BCM7425A0 is not set
 CONFIG_BCM7425B0=y
 # CONFIG_BCM7429A0 is not set
 # CONFIG_BCM7435A0 is not set
 # CONFIG_BCM7468B0 is not set
 # CONFIG_BCM7550A0 is not set
 # CONFIG_BCM7550B0 is not set
-# CONFIG_BCM7552A0 is not set
 # CONFIG_BCM7552B0 is not set
-# CONFIG_BCM7631B0 is not set
-# CONFIG_BCM7640A0 is not set
-# CONFIG_BCM7640B0 is not set
 
 #
 # Memory map
@@ -115,7 +102,7 @@ CONFIG_BCMGENET_NAPI=y
 # CONFIG_BCMGENET_TX_CSUM is not set
 # CONFIG_BCMGENET_DUMP_DATA is not set
 # CONFIG_BCMGENET_DUMP_TRACE is not set
-CONFIG_BRCM_MOCA=y
+# CONFIG_BRCM_MOCA is not set
 CONFIG_BRCM_USB=y
 # CONFIG_BRCM_OVERRIDE_USB is not set
 CONFIG_BRCM_SDIO=y
@@ -140,15 +127,15 @@ CONFIG_BRCM_UARTA_IS_16550=y
 CONFIG_BRCM_UARTB_IS_16550=y
 CONFIG_BRCM_UARTC_IS_16550=y
 CONFIG_BRCM_HAS_PCIE=y
-CONFIG_BRCM_GENET_V2=y
-CONFIG_BRCM_GENET_VERSION=2
+CONFIG_BRCM_GENET_V3=y
+CONFIG_BRCM_GENET_VERSION=3
 CONFIG_BRCM_HAS_GENET=y
 CONFIG_BRCM_HAS_GENET_0=y
-CONFIG_BRCM_HAS_GENET_1=y
-CONFIG_BRCM_HAS_MOCA=y
-CONFIG_BRCM_HAS_MOCA_11_PLUS=y
-CONFIG_BRCM_MOCA_VERS=0x1102
-CONFIG_BRCM_MOCA_ON_GENET_1=y
+# CONFIG_BRCM_HAS_GENET_1=y
+# CONFIG_BRCM_HAS_MOCA=y
+# CONFIG_BRCM_HAS_MOCA_20=y
+# CONFIG_BRCM_MOCA_VERS=0x2000
+# CONFIG_BRCM_MOCA_ON_GENET_1=y
 CONFIG_BRCM_HAS_SATA=y
 CONFIG_BRCM_HAS_SATA3=y
 # CONFIG_BRCM_SATA_75MHZ_PLL is not set
@@ -170,6 +157,7 @@ CONFIG_BRCM_HAS_EMMC=y
 CONFIG_BRCM_ZSCM_L2=y
 CONFIG_BRCM_CPU_DIV=y
 CONFIG_BRCM_HAS_XKS01=y
+CONFIG_BRCM_HAS_XI=y
 CONFIG_BRCM_HAS_UPPER_MEMORY=y
 CONFIG_BRCM_UPPER_768MB=y
 CONFIG_BRCM_HAS_2GB_MEMC0=y
@@ -178,7 +166,7 @@ CONFIG_BRCM_HAS_DIGITAL_DDR_PHY=y
 CONFIG_BRCM_HAS_STANDBY=y
 CONFIG_BRCM_HAS_AON=y
 CONFIG_BRCM_PWR_HANDSHAKE=y
-CONFIG_BRCM_PWR_HANDSHAKE_V0=y
+CONFIG_BRCM_PWR_HANDSHAKE_V1=y
 CONFIG_BRCM_PLATFORM_DEFAULTS=y
 CONFIG_BCM7425=y
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
@@ -859,7 +847,7 @@ CONFIG_SATA_PMP=y
 # Controllers with non-SFF native interface
 #
 CONFIG_SATA_AHCI=y
-# CONFIG_SATA_AHCI_PLATFORM is not set
+CONFIG_SATA_AHCI_PLATFORM=y
 # CONFIG_SATA_INIC162X is not set
 # CONFIG_SATA_SIL24 is not set
 CONFIG_ATA_SFF=y
