--- a/recipes/linux/linux-vusolo-3.1.1/vusolo_defconfig
+++ b/recipes/linux/linux-vusolo-3.1.1/vusolo_defconfig
@@ -98,6 +98,10 @@ CONFIG_BCM7325B0=y
 CONFIG_BRCM_CONSOLE_DEVICE=0
 CONFIG_BRCM_FLASH=y
 CONFIG_BRCM_FIXED_MTD_PARTITIONS=y
+CONFIG_MTD_BRCMNAND=y
+CONFIG_BRCMNAND_MTD_EXTENSION=y
+# CONFIG_MTD_BRCMNAND_VERIFY_WRITE is not set
+# CONFIG_MTD_BRCMNAND_CORRECTABLE_ERR_HANDLING is not set
 CONFIG_BCMEMAC=y
 # CONFIG_BCMEMAC_EXTMII is not set
 CONFIG_BRCM_USB=y
@@ -129,6 +133,7 @@ CONFIG_BRCM_HAS_NAND_MINOR_0=y
 CONFIG_BRCM_HAS_NAND_MAJOR_2=y
 CONFIG_BRCMNAND_MAJOR_VERS=2
 CONFIG_BRCMNAND_MINOR_VERS=0
+CONFIG_BRCM_HAS_NAND=y
 CONFIG_BRCM_SCM_L2=y
 CONFIG_BRCM_HAS_1GB_MEMC0=y
 CONFIG_BRCM_PLATFORM_DEFAULTS=y
@@ -491,7 +496,7 @@ CONFIG_IPV6_PIMSM_V2=y
 # CONFIG_L2TP is not set
 CONFIG_STP=m
 CONFIG_BRIDGE=m
-#CONFIG_BRIDGE_IGMP_SNOOPING is not set
+CONFIG_BRIDGE_IGMP_SNOOPING=y
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
@@ -516,7 +521,7 @@ CONFIG_LLC=m
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
-CONFIG_BT=y
+CONFIG_BT=m
 CONFIG_BT_L2CAP=y
 # CONFIG_BT_SCO is not set
 CONFIG_BT_RFCOMM=m
@@ -524,12 +529,12 @@ CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=m
 # CONFIG_BT_BNEP_MC_FILTER is not set
 CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
+CONFIG_BT_HIDP=m
 
 #
 # Bluetooth device drivers
 #
-CONFIG_BT_HCIBTUSB=y
+CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
@@ -2253,7 +2258,7 @@ CONFIG_IOMMU_SUPPORT=y
 #
 # File systems
 #
-CONFIG_EXT2_FS=y
+CONFIG_EXT2_FS=m
 # CONFIG_EXT2_FS_XATTR is not set
 # CONFIG_EXT2_FS_XIP is not set
 CONFIG_EXT3_FS=y
@@ -2385,7 +2390,7 @@ CONFIG_LOCKD_V4=y
 CONFIG_NFS_COMMON=y
 CONFIG_SUNRPC=y
 # CONFIG_CEPH_FS is not set
-CONFIG_CIFS=y
+CONFIG_CIFS=m
 # CONFIG_CIFS_STATS is not set
 # CONFIG_CIFS_WEAK_PW_HASH is not set
 # CONFIG_CIFS_XATTR is not set
