after ANGA, splash

--- a/conf/machine/vusolo2.conf
+++ b/conf/machine/vusolo2.conf
@@ -80,7 +80,11 @@ MACHINE_FEATURES += "display-text-vfd"
 EXTRA_IMAGECMD_jffs2 = " --eraseblock=0x20000 -n -l "
 IMAGE_CMD_jffs2 = " \
 	cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        cp ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin; \
+        cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
 	rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin; \
+        rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
 	mkfs.jffs2 --root=${IMAGE_ROOTFS}/boot --faketime \
 	--disable-compressor=lzo --compression-mode=size \
        --output=${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 \
@@ -95,6 +99,8 @@ IMAGE_CMD_jffs2 = " \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo2/root_cfe_auto.jffs2; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo2/kernel_cfe_auto.bin; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.boot.jffs2 ${DEPLOY_DIR_IMAGE}/vuplus/solo2/boot_cfe_auto.jffs2; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo2/initrd_cfe_auto.bin; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo2/splash_cfe_auto.bin; \
 	cd ${DEPLOY_DIR_IMAGE}; \
 	zip ${IMAGE_NAME}_usb.zip vuplus/solo2/*; \
 	rm -rf vuplus; \       
@@ -111,7 +117,11 @@ EXTRA_IMAGECMD_COMPAT = " --eraseblock=0x20000 -n -l "
 
 IMAGE_CMD_ubi_prepend = " \
         cp ${IMAGE_ROOTFS}/boot/vmlinux.gz ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz; \
+        cp ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin; \
+        cp ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin; \
         rm -f ${IMAGE_ROOTFS}/boot/vmlinux.gz; \
+        rm -f ${IMAGE_ROOTFS}/boot/initrd_cfe_auto.bin; \
+        rm -f ${IMAGE_ROOTFS}/boot/splash_cfe_auto.bin; \
         "
 
 IMAGE_CMD_ubi_append = "; \
@@ -119,6 +129,8 @@ IMAGE_CMD_ubi_append = "; \
         mkdir -p ${DEPLOY_DIR_IMAGE}/vuplus/solo2; \
         cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ubi ${DEPLOY_DIR_IMAGE}/vuplus/solo2/root_cfe_auto.jffs2; \
 	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.vmlinux.gz ${DEPLOY_DIR_IMAGE}/vuplus/solo2/kernel_cfe_auto.bin; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.initrd_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo2/initrd_cfe_auto.bin; \
+	cp ${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.splash_cfe_auto.bin ${DEPLOY_DIR_IMAGE}/vuplus/solo2/splash_cfe_auto.bin; \
         cd ${DEPLOY_DIR_IMAGE}; \
 	zip ${IMAGE_NAME}_usb.zip vuplus/solo2/*; \
 	rm -rf vuplus; \ 
