--- a/recipes/linux/linux-vusolo2-2.6.37/vusolo2_defconfig
+++ b/recipes/linux/linux-vusolo2-2.6.37/vusolo2_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/mips 2.6.37-2.8 Kernel Configuration
-# Thu May 10 15:53:56 2012
+# Thu Aug 23 13:51:32 2012
 #
 CONFIG_MIPS=y
 
@@ -93,7 +93,7 @@ CONFIG_BCMGENET=y
 #
 # BCMGENET options
 #
-# CONFIG_BCMGENET_0_GPHY is not set
+CONFIG_BCMGENET_0_GPHY=y
 # CONFIG_BCMGENET_1_GPHY is not set
 # CONFIG_BCMGENET_RX_DESC_THROTTLE is not set
 CONFIG_BCMGENET_NAPI=y
@@ -813,7 +813,28 @@ CONFIG_NETDEVICES=y
 # CONFIG_TUN is not set
 # CONFIG_VETH is not set
 CONFIG_MII=y
-# CONFIG_PHYLIB is not set
+CONFIG_PHYLIB=y
+
+#
+# MII PHY device drivers
+#
+# CONFIG_MARVELL_PHY is not set
+# CONFIG_DAVICOM_PHY is not set
+# CONFIG_QSEMI_PHY is not set
+# CONFIG_LXT_PHY is not set
+# CONFIG_CICADA_PHY is not set
+# CONFIG_VITESSE_PHY is not set
+# CONFIG_SMSC_PHY is not set
+# CONFIG_BROADCOM_PHY is not set
+# CONFIG_BCM63XX_PHY is not set
+# CONFIG_ICPLUS_PHY is not set
+CONFIG_REALTEK_PHY=y
+# CONFIG_NATIONAL_PHY is not set
+# CONFIG_STE10XP is not set
+# CONFIG_LSI_ET1011C_PHY is not set
+# CONFIG_MICREL_PHY is not set
+# CONFIG_FIXED_PHY is not set
+# CONFIG_MDIO_BITBANG is not set
 CONFIG_NET_ETHERNET=y
 # CONFIG_AX88796 is not set
 # CONFIG_SMC91X is not set
@@ -834,7 +855,7 @@ CONFIG_NET_ETHERNET=y
 # CONFIG_KS8851_MLL is not set
 CONFIG_NETDEV_1000=y
 # CONFIG_STMMAC_ETH is not set
-# CONFIG_NETDEV_10000 is not set
+CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
 # CONFIG_LIBERTAS_THINFIRM is not set
 # CONFIG_AT76C50X_USB is not set
@@ -853,6 +874,11 @@ CONFIG_RT2X00=m
 # CONFIG_RT2500USB is not set
 CONFIG_RT73USB=m
 # CONFIG_RT2800USB is not set
+CONFIG_RT2X00_LIB_USB=m
+CONFIG_RT2X00_LIB=m
+CONFIG_RT2X00_LIB_FIRMWARE=y
+CONFIG_RT2X00_LIB_CRYPTO=y
+# CONFIG_RT2X00_DEBUG is not set
 # CONFIG_WL1251 is not set
 # CONFIG_WL12XX is not set
 CONFIG_ZD1211RW=m
