fix e2 bb and make fuse as modules

--- a/recipes/linux/linux-vuduo2-3.1.1/vuduo2_defconfig
+++ b/recipes/linux/linux-vuduo2-3.1.1/vuduo2_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/mips 2.6.37-2.8 Kernel Configuration
-# Thu Jun  7 19:50:36 2012
+# Fri Aug 31 17:36:37 2012
 #
 CONFIG_MIPS=y
 
@@ -95,14 +95,12 @@ CONFIG_BCMGENET=y
 # BCMGENET options
 #
 # CONFIG_BCMGENET_0_GPHY is not set
-# CONFIG_BCMGENET_1_GPHY is not set
 # CONFIG_BCMGENET_RX_DESC_THROTTLE is not set
 CONFIG_BCMGENET_NAPI=y
 # CONFIG_BCMGENET_RX_CSUM is not set
 # CONFIG_BCMGENET_TX_CSUM is not set
 # CONFIG_BCMGENET_DUMP_DATA is not set
 # CONFIG_BCMGENET_DUMP_TRACE is not set
-# CONFIG_BRCM_MOCA is not set
 CONFIG_BRCM_USB=y
 # CONFIG_BRCM_OVERRIDE_USB is not set
 CONFIG_BRCM_SDIO=y
@@ -131,11 +129,7 @@ CONFIG_BRCM_GENET_V3=y
 CONFIG_BRCM_GENET_VERSION=3
 CONFIG_BRCM_HAS_GENET=y
 CONFIG_BRCM_HAS_GENET_0=y
-# CONFIG_BRCM_HAS_GENET_1=y
-# CONFIG_BRCM_HAS_MOCA=y
-# CONFIG_BRCM_HAS_MOCA_20=y
-# CONFIG_BRCM_MOCA_VERS=0x2000
-# CONFIG_BRCM_MOCA_ON_GENET_1=y
+CONFIG_BRCM_MOCA_ON_GENET_1=y
 CONFIG_BRCM_HAS_SATA=y
 CONFIG_BRCM_HAS_SATA3=y
 # CONFIG_BRCM_SATA_75MHZ_PLL is not set
@@ -1908,7 +1902,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTA is not set
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
-CONFIG_FUSE_FS=y
+CONFIG_FUSE_FS=m
 # CONFIG_CUSE is not set
 
 #
