--- a/conf/machine/bm750.conf
+++ b/conf/machine/bm750.conf
@@ -45,7 +45,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1 = "\
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS = ${@base_contains('PREFERRED_VERSION_linux-bm750', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RDEPENDS_3.1.1}', d)}
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS = ${@base_contains('PREFERRED_VERSION_linux-bm750', '2.6.18', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_2.6.18}', '${MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS_3.1.1}', d)}
 
-#MACHINE_FEATURES += "rt3070-legacy"
+MACHINE_FEATURES += "rt3070-legacy"
 require conf/machine/include/vuplus-modules.inc
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += ${@base_contains('PREFERRED_VERSION_linux-bm750', '3.1.1', '${KERNEL_WIFI_MODULES}', '', d)}
